--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="ATG Visualizer" />
+    <meta
+      property="og:description"
+      content="Web-based visualization tool for adjacent transposition graphs (ATGs) and associated poset covers."
+    />
+
     <title>ATG Visualizer</title>
   </head>
   <body>
