--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,10 +16,10 @@
       property="og:description"
       content="Web-based visualization tool for adjacent transposition graphs (ATGs) and associated poset covers."
     />
-
     <title>ATG Visualizer</title>
   </head>
   <body>
+    <div id="pattern"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
